--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "rabbit-name-service",
+  "name": "ensproject",
   "version": "1.0.0",
-  "description": "A project which gives people the opportunity to share their favorite music, movie, quote, youtube video, ... on the Ethereum blockchain using the Layer 2 Polygon under the form of Non-Fungible Token (NFT).",
+  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "RabbitNameService"
-  },
-  "keywords": [
-    "blockchain",
-    "smart contract",
-    "ethereum",
-    "nft",
-    "polygon",
-    "hardhat"
-  ],
-  "author": "Romain Trefault",
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.5"
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.4",
+    "hardhat": "^2.9.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0",
+    "react-scripts": "^5.0.1"
   }
 }
